# Project-for-RobotProgramming

./: README.md
Gazebo/: empty_world.world  model.config  model.sdf  readme.md
Gazebo/models/: readme.md
Gazebo/path_planner/: package.xml  setup.py
PathPlanning/map+param/: burger.yaml  map.pgm  map.yaml
Vision/black/: black1.txt  black1.xml  black10.txt  black10.xml  black11.txt  black11.xml  black12.txt  black12.xml  black13.txt  black13.xml  black14.txt  black14.xml  black15.txt  black15.xml  black16.txt  black16.xml  black17.txt  black17.xml  black18.txt  black18.xml  black19.txt  black19.xml  black2.txt  black2.xml  black20.txt  black20.xml  black21.txt  black21.xml  black22.txt  black22.xml  black23.txt  black23.xml  black24.txt  black24.xml  black25.txt  black25.xml  black3.txt  black3.xml  black4.txt  black4.xml  (+10 more)
Vision/cam_shape_detector/: cam_shape_detector.py
Vision/object_to_goal/: object_to_goal.py
Vision/white/: white1.txt  white1.xml  white10.txt  white10.xml  white11.txt  white11.xml  white12.txt  white12.xml  white13.txt  white13.xml  (+44 more)
project/: RobPro.pptx
project/turtlebot3_group6/: package.xml  requirement.txt  setup.cfg  setup.py
project/turtlebot3_group6/launch/: lift.launch.py
project/turtlebot3_group6/map/: map.pgm  map.yaml
project/turtlebot3_group6/rviz/: tb_navigation_0610.rviz
project/turtlebot3_group6/turtlebot3_group6/object_to_goal/: object_to_goal.py
project/turtlebot3_group6/turtlebot3_group6/path_node/: path_node.py
project/turtlebot3_group6/turtlebot3_group6/turtlebot3_astar_move/: turtlebot3_astar_move.py
(+22 files in other folders)
